# PlatGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
examples/: CMakeLists.txt  README.md
libraylib/include/: raylib.h
src/Player/: player.cpp  player.h
